--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,31 @@
+### Eclipse ###
+.classpath
+.project
+.settings
+
+### IntelliJ IDEA ###
+*.iml
+*.ipr
+*.iws
+.idea
+out
+
+### NetBeans ###
+nbproject/private/
+build/
+nbbuild/
+dist/
+nbdist/
+.nb-gradle/
+
+# Vim
+tags
+.*.swp
+.*.swo
+
+# macOS
+.DS_Store
+
 # Compiled class file
 *.class
 
